# magisterka

./: .cursorignore  .gitignore  README.md  _model_results.html  _model_results.ipynb  _old_train_absa_model.ipynb  _prediction_tests.ipynb  _tf_idf_results.ipynb  _train-absa-model.ipynb  _train_absa_model-distilbert.ipynb  _train_absa_model.ipynb  app.py  main.py  pyproject.toml
application/: data_preparation.py  dataset_cards.py  dataset_types.py  dataset_upload_validation.py  label_dataset.py  map_components.py  notifications.py  place_details.py  results_repository.py  svg_icons.py  visual_settings.py
config/: global_config.py
experiments/: data-labelling-with-ai.ipynb  data-preparation.ipynb  eda_metadata.ipynb  eda_reviews.ipynb  transform-json-to-csv.ipynb
model/: choose_architecture.py  model.py  predict.py  prepare_dataset.py  threshold_tuning.py  train.py
pages/: data_table.py  home.py  label_dataset.py  repository.py
predictions/: eval_align.py  labeled_csv.py  predict_dataset.py  predict_single_headed.py  prediction_fine_tuned.py  prediction_llm.py  prediction_model_base.py  prediction_tfidf_lsa.py  prediction_tfidf_lsa_rf.py  prediction_zero_shot.py
scripts/: absa_smoke_train.py  bert_fix_experiment.py  lsa_experiment.py
tests/: manual_tests.md  test_dataset_upload_validation.py  test_map_and_place_details.py  test_repository_and_prediction.py  test_results_repository.py
wyniki_badań/: agreement_matrix.csv  coverage_by_aspect.csv  dataset_statistics.json  generate_results.py  per_aspect_f1_4class.csv  per_aspect_f1_mentioned.csv  (+2 more)
(+7 files in other folders)
